fix for 40reader_mem_error.t (issue #14)
LibXML::Reader wasn't supporting the :!network flag as documented.
Test was blocking trying to do an unintended network fetch of an
external Dtd.

--- a/Changes
+++ b/Changes
@@ -1,1 +1,6 @@
-0.0.1 2019-03-40 Initial release
+0.0.1 2019-03-40
+    Initial release
+
+0.0.2 2019-03-xx
+    - [LibXML::Reader] add missing :!network option. Fix unintended
+      network fetch in 40reader_mem_error.t
