--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-0.0.3  2019-09-04
+0.0.4 2019-09-05
+    - [LibXML::Node] remove custom native accessor
+    - drop min supported libxml version from v2.09.00 to v2.08.00
+0.0.3 2019-09-04
     - [src/xml6_ref.6] fix 'uint' compilation error #16
     - [META6.json] fix source URL #17
 0.0.2 2019-09-04
@@ -9,6 +12,5 @@
     - [LibXML::Node::Set] rename .push method to .add
     - [LibXML::Reader] add missing :!network option. Fix unintended
       network fetch of an external Dtd in 40reader_mem_error.t
-
 0.0.1 2019-09-03
     Initial release
