--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.0.4 2019-09-05
     - [LibXML::Node] remove custom native accessor
     - drop min supported libxml version from v2.09.00 to v2.08.00
+    - skip too successful 'comment' test for open issue #18 (segfaulting)
 0.0.3 2019-09-04
     - [src/xml6_ref.6] fix 'uint' compilation error #16
     - [META6.json] fix source URL #17
