--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.0.8 2019-09-17
+    - [LibXML::Parser::Context] fixed memory leak #21. Added $*XML-CONTEXT
+      dynamic variable.
 0.0.7 2019-09-13
     - [LibXML::SAX::Handler::SAX2]
       -- replace .finish method with .publish
