--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.0.9 2019-09-xx
+    - Error handling improvements for LibXSLT:
+      -- catch input handler exceptions
+      -- alllow for multiple '%s' arguments in generic errors
 0.0.8 2019-09-17
     - [LibXML::Parser::Context] fixed memory leak #21. Added $*XML-CONTEXT
       dynamic variable.
