--- a/Changes
+++ b/Changes
@@ -1,7 +1,15 @@
+0.1.0 2019-09-27
+    - [LibXML::Parser] More secure default parser options.
+      -- The parser defaults `network` and `expand-entities` have been changed from
+         True to False.  This is partially in reponse to an equivalent ticket for
+         the Perl 5 XML::LibXML module https://rt.cpan.org/Public/Bug/Display.html?id=118032
+      -- The `dtd` option has been highlighted in the doc as a way of restoring these options
+         in a secure and trusted environment and restoring Perl 5 XML::LibXML like access.
 0.0.9 2019-09-23
-    - Error handling improvements for LibXSLT:
+    - [LibXML::ErrorHandler improvements for LibXSLT:
       -- catch input handler exceptions
       -- alllow for multiple '%s' arguments in generic errors
+      -- display multiple errors
     - [LibXML::XPATH::Context] fixed object GC #22. Added $*XPATH-CONTEXT
     - Ported XML::XPath tests to xt/xpath/. Added methods for improved
       compatibility with  XML::XPath and XML modules:
