--- a/Changes
+++ b/Changes
@@ -1,14 +1,14 @@
 0.1.1 2019-10-xx
-    - [LibXML][LibXML;:Config] add .config-version method. Version of libxml2
-      that the library was configured against (and bindings were built against).
-    - [LibXML::Node::Set][LibXML::Node::List- add .first and .tail methods
+    - [LibXML][LibXML;:Config] add .config-version method; version of libxml2
+      that the library was configured against (and bindings were built against)
+    - [LibXML::Node::Set][LibXML::Node::List] - add .first() and .tail() methods
 0.1.0 2019-09-27
     - [LibXML::Parser] More secure default parser options. #23
       -- The parser defaults `network` and `expand-entities` have been changed from
          True to False.  This is partially in reponse to an equivalent ticket for
          the Perl 5 XML::LibXML module https://rt.cpan.org/Public/Bug/Display.html?id=118032
-      -- The `dtd` option has been highlighted in the doc as a way of restoring these options
-         in a secure and trusted environment and restoring Perl 5 XML::LibXML like access.
+      -- Document the `dtd` parser option as a quick way of setting up these options in
+         a secure and trusted environment and restoring Perl 5 XML::LibXML like access.
 0.0.9 2019-09-23
     - [LibXML::ErrorHandler improvements for LibXSLT:
       -- catch input handler exceptions
