--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+0.1.4 2019-10-14
+    - [src/dom.c] return HTML xpath keys as lowercase; make them case-insensitive.
 0.1.3 2019-10-13
     - [LibXML::Node][LibXML::Node::Set][LibXML::Node::List]
       -- add .xpath-key() method; returns a key that can be used to
