--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.1.5 2019-10-xx
+    - [LibXML::Node::Set] Hash methods now dereferences child and attribute nodes.
+      So that $doc<dromedaries><species> is now similar to $doc<dromedaries/species>
 0.1.4 2019-10-14
     - [src/dom.c] return HTML xpath keys as lowercase; make them case-insensitive.
 0.1.3 2019-10-13
