LibXSLT regressions for #24

--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.1.6 2019-10-21
+    - Downgrade class LibXML::ErrorHandler to role LibXML::ErrorHandling.
+      This fixes #24; context and error handler object having distinct
+      $!suppress-errors and $!suppress-warnings attributes, but not
+      propagating these or keping them in sync.
 0.1.5 2019-10-18
     - Added $node.findnodes :deref option. Use it in the call from
       the .AT-KEY() method. This changes:
