add options processing for :recover, :suppress-errors, :suppress-warnings (various contexts)
also match Perl 5 find() recovery policy. recover if a value is
returned. raise an error otherwise. Notices while looking at #25

--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
 0.1.7 2019-10-xx
     - [LibXML::Node::List] add AT-KEY method
-    - [LibXML::Node::List][LibXML::Node::Set] Add FALLBACK that dispatches
-      method calls to the first item in the set/list.
+    - [LibXML::XPath::Context]
+      -- recover queries when a result is returned, die otherwise. Matches
+         behavious of Perl 5 module.
+      -- add :suppress-warnings and :suppress-errors
 0.1.6 2019-10-21
     - Replace class LibXML::ErrorHandler with role LibXML::ErrorHandling. Fixes #24.
     - [LibXML::DocumentFragment]. Add subclass ParserContext. Use it
