--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+0.1.8 2019-11-xx
+    - Implement $node.first($xpath) and $node.last($xpath) multi-methods
 0.1.7 2019-10-29
     - [LibXML::Node::List] add AT-KEY method
     - [LibXML::XPath::Context] recover queries when a result is returned;
