--- a/Changes
+++ b/Changes
@@ -1,12 +1,14 @@
-0.1.9 2019-11-xx
-    - [LibXML::Item] add ast-to-xml() - for quick construction of nodes from data
-    - [LibXML::XPath::Context] Implement querySelector() and querySelectorAll()
-      methods. Can be delegated CSS::Selector::To::XPath (or similar)
+0.1.9 2019-11-07
+    New AST construction mode:
+    - [LibXML::Item] add ast-to-xml() - for succint construction of nodes from data
     - [LibXML::PI] nodeName() method now prepends '?'
     - [LibXML::CData] - nodeName shortened from '#cdata-section' to '#cdata'
     - [LibXML::Node]
       -- getElementsByTag name can now select '?pi-name', '?*', '@*' 
       -- added .ast() method
+    'Pluggable' CSS Selectors:
+    - [LibXML::XPath::Context] Implement querySelector() and querySelectorAll()
+      methods. Can be delegated CSS::Selector::To::XPath (or similar)
 0.1.8 2019-11-03
     - [LibXML::Node][LibXML::XPath::Context] Added:
       -- $node.first($xpath) and $node.last($xpath) multi-methods
