update change log

--- a/Changes
+++ b/Changes
@@ -9,6 +9,8 @@
     'Pluggable' CSS Selectors:
     - [LibXML::XPath::Context] Implement querySelector() and querySelectorAll()
       methods. Can be delegated CSS::Selector::To::XPath (or similar)
+    Issues:
+    - [LibXML::Item] #27 improved class loading in box-class()
 0.1.8 2019-11-03
     - [LibXML::Node][LibXML::XPath::Context] Added:
       -- $node.first($xpath) and $node.last($xpath) multi-methods
