--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.1.10 2019-11-xx
+    - [LibXML::Find::Context] fix memory leaks in .find() and .findnodes(). Fix node-set
+      return values from .find()
+
 0.1.9 2019-11-07
     New AST construction mode:
     - [LibXML::Item] add ast-to-xml() - for succint construction of nodes from data
