--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
-0.2.2 2019-11-xx
+0.2.2 2019-11-29
     - [domXPath] fixed reference counting in domPushNodeSet() #29
+    - [LibXML::ErrorHandling][LibXML::SAX::Builder]
+      -- Changed the SAX `serror($err)` callback argument from an native `xmlError`
+         structure to a `X::LibXML` exception object.
+      -- Fixed SAX Handler dispatch of Raku callback raised exceptions #30
 0.2.1 2019-11-27
     - [dom.c] Split-off domASTKey() and domXPathKey() functions from domNodeName().
     - [LibXML::Node]
