--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@
       -- Changed the SAX `serror($err)` callback argument from an native `xmlError`
          structure to a `X::LibXML` exception object.
       -- Fixed SAX Handler dispatch of Raku callback raised exceptions #31
+   - Rename classes LibXML::AttrDecl -> LibXML::Dtd::Attr, LibXML::ElementDecl
+     -> LibXML::Dtd::Element; work in progress on #30
 0.2.1 2019-11-27
     - [dom.c] Split-off domASTKey() and domXPathKey() functions from domNodeName().
     - [LibXML::Node]
