--- a/Changes
+++ b/Changes
@@ -1,4 +1,12 @@
-0.2.4 2019-12-xx
+0.2.4 2019-12-08
+    - [xml6_gbl.c]
+      Add xml6_gbl_save_error_handlers() and xml6_gbl_restore_error_handlers().
+    - [LibXML::XPath::Context]
+      -- save/restore error handlers
+    - [LibXML::ErrorHandling][LibXML::Reader][LibXML::Schema][LibXML::RelaxNG]
+      -- save/restore error handlers
+      -- Replace X::LibXML::Reader::OpFail with X::LibXML::OpFail. Fix usage
+         in schema and relax-ng.
     - [LibXML::{Pattern|Dtd|Schema|RelaxNg|RegExp}]
       Added ACCEPTS() multi methods for more Rakuish matching, e.g.:
           $node ~~ $pattern; $doc ~~ $dtd; "abc" ~~ $regexp
