--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
-0.3.0 2020-04-29
+0.3.2 2020-05-xx
+    - Rename .Str(), .Blob() options; :expand -> :tag-expansion,
+      :skip-decl -> :skip-xml-declaration. Make them consistant
+      configuration defaults.
+0.3.1 2020-04-29
     - Add $node.ACCEPTS() method for XPath matching, e.g.:
       'self::foo' ~~ $node
     - renamed github project p6-xml -> libxml-raku
