--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
-0.3.2 2020-05-xx
+0.4.0 2020-05-xx
+    - Overhaul of Pod documentation.
     - Rename .Str(), .Blob() options; :expand -> :tag-expansion,
       :skip-decl -> :skip-xml-declaration. Make them consistant
       configuration defaults.
