--- a/Changes
+++ b/Changes
@@ -6,6 +6,8 @@
     - Rename .Str(), .Blob() options; :expand -> :tag-expansion,
       :skip-decl -> :skip-xml-declaration. Make them consistant
       configuration defaults.
+    - implemented $node.last(:!blank) option
+    - renamed role LibXML::_DOMNode -> LibXML::_ParentRole
 0.3.1 2020-04-29
     - Add $node.ACCEPTS() method for XPath matching, e.g.:
       'self::foo' ~~ $node
