move addNewChild() method back to LibXML::Node
wip on #34

--- a/Changes
+++ b/Changes
@@ -1,8 +1,9 @@
 0.4.0 2020-05-xx
-    - Overhaul of Pod documentation.
     - Fix $node.getOwner() method to return the root of the
       current node. Distinguish it from .getOwnerDocument
       which always returns a LibXML::Document object.
+    - Fix $node.replace() method to work on the root element
+    - Overhaul of Pod documentation.
     - Rename .Str(), .Blob() options; :expand -> :tag-expansion,
       :skip-decl -> :skip-xml-declaration. Make them consistant
       configuration defaults.
