--- a/Changes
+++ b/Changes
@@ -9,6 +9,7 @@
       configuration defaults.
     - implemented $node.last(:!blank) option
     - renamed role LibXML::_DOMNode -> LibXML::_ParentRole
+    - Added 'boxed' trait for native wrapping of simple methods
 0.3.1 2020-04-29
     - Add $node.ACCEPTS() method for XPath matching, e.g.:
       'self::foo' ~~ $node
