--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
-0.5.3 2020-07-xx
-    - Add LibXML::HashMap bindings to xmlHashTable
+0.5.3 2020-07-02
+    - Add LibXML::HashMap; bindings to xmlHashTable.
+    - Use it for node lists and sets associative interfaces #43
+    - Fix double referencing of node-set elements #44
 0.5.2 2020-06-18
-    - Fix #42 .parent() on root element dieing
+    - Fix #42 .parent() on root element dying
 0.5.1 2020-06-18
     - Fix #41 getElementsByXxxx() order scrambling (broken in 0.5.0)
 0.5.0 2020-06-17
