--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.5.4 2020-07-04
+    - Add live object metrics to 11memory.t.
+    - Add LibXML::Parser::Context.publixh() method with early
+      destruction of xmlParserCtxt objects. Reduce number of live
+      objects and memory usage #
 0.5.3 2020-07-02
     - Add LibXML::HashMap; bindings to xmlHashTable.
     - Use it for node lists and sets associative interfaces #43
