--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-0.5.7 2020-07-xx
+0.5.8 2020-08-xx
+    - Add :%ns option to node find(), find-nodes(), find-value(), exists()
+      and xpath-context() methods; also added to xpath context new() method.
+0.5.7 2020-08-06
     - Indicate position of parsing errors (Perl port) #15
     - Hide reader op() methods from backtrace
     - Make it illegal to insert a DTD owned by one document into
