--- a/Changes
+++ b/Changes
@@ -1,16 +1,18 @@
+0.5.9 2020-08-xx
+    - Add $node.isBlank() method; mapped to raw xmlIsBlankNode() method.
 0.5.8 2020-08-07
     - Add :%ns option to node find(), find-nodes(), find-value(), exists(),
       xpath-context(), and xpath context new() method.
 0.5.7 2020-08-06
     - Indicate position of parsing errors (Perl port) #15
     - Hide reader op() methods from backtrace
-    - Make it illegal to insert a DTD owned by one document into
-      another. This prevents the subsequent memory management and
-      valgrind errors noted in #35. A cloned copy of the Dtd can be
-      inserted: $doc.setInternalSubset: $doc.getInternalSubset.clone();
+    - Make it illegal to move a DTD owned by one document into another.
+      This prevents the subsequent memory management and valgrind errors
+      noted in #35. A cloned copy of the Dtd can be inserted:
+          $to-doc.setInternalSubset: $from-doc.getInternalSubset.clone();
 0.5.6 2020-07-13
     - Hide validate() methods from backtrace
-    - Tweak multi candidate parse(_U:) and parse($) candidates;
+    - Tweak multi candidate parse(_U:) and parse($) candidates to
       ensure all options are processed by the parser.
 0.5.5 2020-07-07
     - Changed LibXML::HashMap node handling:
