add LibXML::Dict see() and seen() methods
also some pod (not accessable from index.md).

--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+0.5.10 2020-08-xx
+    - Add LibXML::Dict see() and seen() methods.
 0.5.9 2020-08-17
     - Add $node.isBlank() method; mapped to raw xmlIsBlankNode() method.
     - Fix LibXML::DocumentFragment parse() error handling to return structured
@@ -93,8 +95,8 @@
       (were failing when http/https was not available).
 0.2.3 2019-12-05
     - [dom.c][LibXML::Node] take out case conversion from domXPathGetKey()
-      .xpath-key() to case handling semantics. tags are converted to
-      lowercase on :html parse., but retain case when from the API.
+      .xpath-key() to match case handling semantics. tags are converted to
+      lowercase on :html parse, but retain case when from the API.
       XPath searches then need to match the case (see 12html.t).
     - [LibXML::_Options] fix compilation on Rakudo 2018.07
 0.2.2 2019-11-29
