--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+0.5.12 2020-12-19
+    - Various performance improvments #49
 0.5.11 2020-11-18
     - Fix breakage on Rakudo 2020.10+ blead #48
     - Add native xml6_config:: module
